# practise

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  Node.hpp  Texture.hpp  main.cpp  model.cpp  model.hpp
